--- a/package.json
+++ b/package.json
@@ -2,27 +2,23 @@
   "name": "hubot-available",
   "description": "A hubot script that periodically checks whether a server is available or not.",
   "version": "0.0.0",
-  "author": "René Filip <renefilip@mail.com>",
+  "author": "Rene Filip <renefilip@mail.com>",
   "license": "MIT",
-
   "keywords": "hubot, hubot-scripts, available, status, check, url, server, monitoring",
-
   "repository": {
     "type": "git",
-    "url": "git://github.com/hubot-scripts/hubot-available.git"
+    "url": "git://github.com/filipre/hubot-available.git"
   },
-
   "bugs": {
-    "url": "https://github.com/hubot-scripts/hubot-available/issues"
+    "url": "https://github.com/filipre/hubot-available/issues"
   },
-
   "dependencies": {
+    "async": "^1.4.2",
+    "cron": "^1.0.9"
   },
-
   "peerDependencies": {
     "hubot": "2.x"
   },
-
   "devDependencies": {
     "chai": "^2.1.1",
     "coffee-script": "1.6.3",
@@ -37,9 +33,7 @@
     "sinon": "^1.13.0",
     "sinon-chai": "^2.7.0"
   },
-
   "main": "index.coffee",
-
   "scripts": {
     "test": "grunt test"
   }
