--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-available",
   "description": "A hubot script that periodically checks whether a server is available or not.",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": "Rene Filip <renefilip@mail.com>",
   "license": "MIT",
   "keywords": "hubot, hubot-scripts, available, status, check, url, server, monitoring",
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^1.4.2",
     "cron": "^1.0.9",
+    "http-status-codes": "^1.0.5",
     "moment": "^2.10.6"
   },
   "peerDependencies": {
