--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "async": "^1.4.2",
     "cron": "^1.0.9",
     "http-status-codes": "^1.0.5",
-    "moment": "^2.10.6"
+    "moment": "^2.10.6",
+    "normalize-url": "^1.3.1"
   },
   "peerDependencies": {
     "hubot": "2.x"
